QtBeef/src/Qt/qpainterpath.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QPainterPath
// --------------------------------------------------------------
[CRepr]
struct QPainterPath_Ptr: void
{
}
extension CQt
{
	[LinkName("QPainterPath_new")]
	public static extern QPainterPath_Ptr* QPainterPath_new();
	[LinkName("QPainterPath_new2")]
	public static extern QPainterPath_Ptr* QPainterPath_new2(QPointF_Ptr* startPoint);
	[LinkName("QPainterPath_new3")]
	public static extern QPainterPath_Ptr* QPainterPath_new3(QPainterPath_Ptr* other);
	[LinkName("QPainterPath_Delete")]
	public static extern void QPainterPath_Delete(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_OperatorAssign")]
	public static extern void QPainterPath_OperatorAssign(QPainterPath_Ptr* self, QPainterPath_Ptr* other);
	[LinkName("QPainterPath_Swap")]
	public static extern void QPainterPath_Swap(QPainterPath_Ptr* self, QPainterPath_Ptr* other);
	[LinkName("QPainterPath_Clear")]
	public static extern void QPainterPath_Clear(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_Reserve")]
	public static extern void QPainterPath_Reserve(QPainterPath_Ptr* self, c_int size);
	[LinkName("QPainterPath_Capacity")]
	public static extern c_int QPainterPath_Capacity(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_CloseSubpath")]
	public static extern void QPainterPath_CloseSubpath(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_MoveTo")]
	public static extern void QPainterPath_MoveTo(QPainterPath_Ptr* self, QPointF_Ptr* p);
	[LinkName("QPainterPath_MoveTo2")]
	public static extern void QPainterPath_MoveTo2(QPainterPath_Ptr* self, double x, double y);
	[LinkName("QPainterPath_LineTo")]
	public static extern void QPainterPath_LineTo(QPainterPath_Ptr* self, QPointF_Ptr* p);
	[LinkName("QPainterPath_LineTo2")]
	public static extern void QPainterPath_LineTo2(QPainterPath_Ptr* self, double x, double y);
	[LinkName("QPainterPath_ArcMoveTo")]
	public static extern void QPainterPath_ArcMoveTo(QPainterPath_Ptr* self, QRectF_Ptr* rect, double angle);
	[LinkName("QPainterPath_ArcMoveTo2")]
	public static extern void QPainterPath_ArcMoveTo2(QPainterPath_Ptr* self, double x, double y, double w, double h, double angle);
	[LinkName("QPainterPath_ArcTo")]
	public static extern void QPainterPath_ArcTo(QPainterPath_Ptr* self, QRectF_Ptr* rect, double startAngle, double arcLength);
	[LinkName("QPainterPath_ArcTo2")]
	public static extern void QPainterPath_ArcTo2(QPainterPath_Ptr* self, double x, double y, double w, double h, double startAngle, double arcLength);
	[LinkName("QPainterPath_CubicTo")]
	public static extern void QPainterPath_CubicTo(QPainterPath_Ptr* self, QPointF_Ptr* ctrlPt1, QPointF_Ptr* ctrlPt2, QPointF_Ptr* endPt);
	[LinkName("QPainterPath_CubicTo2")]
	public static extern void QPainterPath_CubicTo2(QPainterPath_Ptr* self, double ctrlPt1x, double ctrlPt1y, double ctrlPt2x, double ctrlPt2y, double endPtx, double endPty);
	[LinkName("QPainterPath_QuadTo")]
	public static extern void QPainterPath_QuadTo(QPainterPath_Ptr* self, QPointF_Ptr* ctrlPt, QPointF_Ptr* endPt);
	[LinkName("QPainterPath_QuadTo2")]
	public static extern void QPainterPath_QuadTo2(QPainterPath_Ptr* self, double ctrlPtx, double ctrlPty, double endPtx, double endPty);
	[LinkName("QPainterPath_CurrentPosition")]
	public static extern QPointF_Ptr QPainterPath_CurrentPosition(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_AddRect")]
	public static extern void QPainterPath_AddRect(QPainterPath_Ptr* self, QRectF_Ptr* rect);
	[LinkName("QPainterPath_AddRect2")]
	public static extern void QPainterPath_AddRect2(QPainterPath_Ptr* self, double x, double y, double w, double h);
	[LinkName("QPainterPath_AddEllipse")]
	public static extern void QPainterPath_AddEllipse(QPainterPath_Ptr* self, QRectF_Ptr* rect);
	[LinkName("QPainterPath_AddEllipse2")]
	public static extern void QPainterPath_AddEllipse2(QPainterPath_Ptr* self, double x, double y, double w, double h);
	[LinkName("QPainterPath_AddEllipse3")]
	public static extern void QPainterPath_AddEllipse3(QPainterPath_Ptr* self, QPointF_Ptr* center, double rx, double ry);
	[LinkName("QPainterPath_AddText")]
	public static extern void QPainterPath_AddText(QPainterPath_Ptr* self, QPointF_Ptr* point, QFont_Ptr* f, libqt_string* text);
	[LinkName("QPainterPath_AddText2")]
	public static extern void QPainterPath_AddText2(QPainterPath_Ptr* self, double x, double y, QFont_Ptr* f, libqt_string* text);
	[LinkName("QPainterPath_AddPath")]
	public static extern void QPainterPath_AddPath(QPainterPath_Ptr* self, QPainterPath_Ptr* path);
	[LinkName("QPainterPath_AddRegion")]
	public static extern void QPainterPath_AddRegion(QPainterPath_Ptr* self, QRegion_Ptr* region);
	[LinkName("QPainterPath_AddRoundedRect")]
	public static extern void QPainterPath_AddRoundedRect(QPainterPath_Ptr* self, QRectF_Ptr* rect, double xRadius, double yRadius);
	[LinkName("QPainterPath_AddRoundedRect2")]
	public static extern void QPainterPath_AddRoundedRect2(QPainterPath_Ptr* self, double x, double y, double w, double h, double xRadius, double yRadius);
	[LinkName("QPainterPath_ConnectPath")]
	public static extern void QPainterPath_ConnectPath(QPainterPath_Ptr* self, QPainterPath_Ptr* path);
	[LinkName("QPainterPath_Contains")]
	public static extern bool QPainterPath_Contains(QPainterPath_Ptr* self, QPointF_Ptr* pt);
	[LinkName("QPainterPath_Contains2")]
	public static extern bool QPainterPath_Contains2(QPainterPath_Ptr* self, QRectF_Ptr* rect);
	[LinkName("QPainterPath_Intersects")]
	public static extern bool QPainterPath_Intersects(QPainterPath_Ptr* self, QRectF_Ptr* rect);
	[LinkName("QPainterPath_Translate")]
	public static extern void QPainterPath_Translate(QPainterPath_Ptr* self, double dx, double dy);
	[LinkName("QPainterPath_Translate2")]
	public static extern void QPainterPath_Translate2(QPainterPath_Ptr* self, QPointF_Ptr* offset);
	[LinkName("QPainterPath_Translated")]
	public static extern QPainterPath_Ptr QPainterPath_Translated(QPainterPath_Ptr* self, double dx, double dy);
	[LinkName("QPainterPath_Translated2")]
	public static extern QPainterPath_Ptr QPainterPath_Translated2(QPainterPath_Ptr* self, QPointF_Ptr* offset);
	[LinkName("QPainterPath_BoundingRect")]
	public static extern QRectF_Ptr QPainterPath_BoundingRect(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_ControlPointRect")]
	public static extern QRectF_Ptr QPainterPath_ControlPointRect(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_FillRule")]
	public static extern Qt_FillRule QPainterPath_FillRule(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_SetFillRule")]
	public static extern void QPainterPath_SetFillRule(QPainterPath_Ptr* self, Qt_FillRule fillRule);
	[LinkName("QPainterPath_IsEmpty")]
	public static extern bool QPainterPath_IsEmpty(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_ToReversed")]
	public static extern QPainterPath_Ptr QPainterPath_ToReversed(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_ElementCount")]
	public static extern c_int QPainterPath_ElementCount(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_ElementAt")]
	public static extern QPainterPath_Element QPainterPath_ElementAt(QPainterPath_Ptr* self, c_int i);
	[LinkName("QPainterPath_SetElementPositionAt")]
	public static extern void QPainterPath_SetElementPositionAt(QPainterPath_Ptr* self, c_int i, double x, double y);
	[LinkName("QPainterPath_Length")]
	public static extern double QPainterPath_Length(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_PercentAtLength")]
	public static extern double QPainterPath_PercentAtLength(QPainterPath_Ptr* self, double t);
	[LinkName("QPainterPath_PointAtPercent")]
	public static extern QPointF_Ptr QPainterPath_PointAtPercent(QPainterPath_Ptr* self, double t);
	[LinkName("QPainterPath_AngleAtPercent")]
	public static extern double QPainterPath_AngleAtPercent(QPainterPath_Ptr* self, double t);
	[LinkName("QPainterPath_SlopeAtPercent")]
	public static extern double QPainterPath_SlopeAtPercent(QPainterPath_Ptr* self, double t);
	[LinkName("QPainterPath_Intersects2")]
	public static extern bool QPainterPath_Intersects2(QPainterPath_Ptr* self, QPainterPath_Ptr* p);
	[LinkName("QPainterPath_Contains3")]
	public static extern bool QPainterPath_Contains3(QPainterPath_Ptr* self, QPainterPath_Ptr* p);
	[LinkName("QPainterPath_United")]
	public static extern QPainterPath_Ptr QPainterPath_United(QPainterPath_Ptr* self, QPainterPath_Ptr* r);
	[LinkName("QPainterPath_Intersected")]
	public static extern QPainterPath_Ptr QPainterPath_Intersected(QPainterPath_Ptr* self, QPainterPath_Ptr* r);
	[LinkName("QPainterPath_Subtracted")]
	public static extern QPainterPath_Ptr QPainterPath_Subtracted(QPainterPath_Ptr* self, QPainterPath_Ptr* r);
	[LinkName("QPainterPath_Simplified")]
	public static extern QPainterPath_Ptr QPainterPath_Simplified(QPainterPath_Ptr* self);
	[LinkName("QPainterPath_OperatorEqual")]
	public static extern bool QPainterPath_OperatorEqual(QPainterPath_Ptr* self, QPainterPath_Ptr* other);
	[LinkName("QPainterPath_OperatorNotEqual")]
	public static extern bool QPainterPath_OperatorNotEqual(QPainterPath_Ptr* self, QPainterPath_Ptr* other);
	[LinkName("QPainterPath_OperatorBitwiseAnd")]
	public static extern QPainterPath_Ptr QPainterPath_OperatorBitwiseAnd(QPainterPath_Ptr* self, QPainterPath_Ptr* other);
	[LinkName("QPainterPath_OperatorBitwiseOr")]
	public static extern QPainterPath_Ptr QPainterPath_OperatorBitwiseOr(QPainterPath_Ptr* self, QPainterPath_Ptr* other);
	[LinkName("QPainterPath_OperatorPlus")]
	public static extern QPainterPath_Ptr QPainterPath_OperatorPlus(QPainterPath_Ptr* self, QPainterPath_Ptr* other);
	[LinkName("QPainterPath_OperatorMinus")]
	public static extern QPainterPath_Ptr QPainterPath_OperatorMinus(QPainterPath_Ptr* self, QPainterPath_Ptr* other);
	[LinkName("QPainterPath_OperatorBitwiseAndAssign")]
	public static extern void QPainterPath_OperatorBitwiseAndAssign(QPainterPath_Ptr* self, QPainterPath_Ptr* other);
	[LinkName("QPainterPath_OperatorBitwiseOrAssign")]
	public static extern void QPainterPath_OperatorBitwiseOrAssign(QPainterPath_Ptr* self, QPainterPath_Ptr* other);
	[LinkName("QPainterPath_OperatorPlusAssign")]
	public static extern QPainterPath_Ptr* QPainterPath_OperatorPlusAssign(QPainterPath_Ptr* self, QPainterPath_Ptr* other);
	[LinkName("QPainterPath_OperatorMinusAssign")]
	public static extern QPainterPath_Ptr* QPainterPath_OperatorMinusAssign(QPainterPath_Ptr* self, QPainterPath_Ptr* other);
	[LinkName("QPainterPath_AddRoundedRect4")]
	public static extern void QPainterPath_AddRoundedRect4(QPainterPath_Ptr* self, QRectF_Ptr* rect, double xRadius, double yRadius, Qt_SizeMode mode);
	[LinkName("QPainterPath_AddRoundedRect7")]
	public static extern void QPainterPath_AddRoundedRect7(QPainterPath_Ptr* self, double x, double y, double w, double h, double xRadius, double yRadius, Qt_SizeMode mode);
}
